# MERALANG

./: AutoGeneratedX86and86_64OpcodeDatasetFramework.mera  BuildGraph.mera  BuildSystem.mera  CLI.mera  CLIBuildSystem.mera  CLIandMain(embeddedORstandalone).mera  CMakeLists.txt  CacheManager.mera  Code of Conduct.md  Compiler.mera  Concurrency.mera  DebuggerInterface.mera  DebuggerRuntime.mera  DebuggerWithGUI.mera  DebuggerWithInterface.mera  DodecagramEncoder.mera  EfficientStorage.mera  FuturePlans.md  Grammar.ebnf  ImportThunkStubs.mera  InteractiveDebuggerInterface(UI_RuntimeHooks).mera  KeyLimeCMakeLists.txt  KeyLimeLwCompiler.cpp  License.md  Linker.mera  LlvmIr.ll  LockFreeTaskQue.mera  MacroEngine.mera  MacroProcessor.mera  MacroSystemExamplesWithRecursionAndConditionals.mera  Main.mera  MainCapsuleToDriveAssemblyAndOutput.mera  MainEntryForCLIModeOrEmbeddedUsage.mera  MeraLangSyntaxSheet.md  MeraParser.js  MultiModeBuilder.mera  MultithreadBuilder.mera  NasmLlvmIr.asm  OpcodeDatabse.mera  OpcodeDatasetGenerator.mera  (+25 more)
Build CLI Example/: cli.mera
KeyLimeLwCompiler/: .gitignore  CMakeLists.txt  FolderTree.pgsql  Readme.md  build.bat  run.bat
KeyLimeLwCompiler/src/: capsule.h  emitter.cpp  emitter.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cp  main.cpp  opcodes.h  parser.cpp  parser.h  utils.cpp  utils.h
KeyLimeLwCompiler/src/hexvm.h/: hexvm.cpp
installer/: build_installer.bat
meralang-vsix/: package.json
meralang-vsix/scripts/: build_publish.sh
sample/: blur_filter.mera
src/: MeraLangCompiler.cpp.  capsule_runner.cpp  dg.h  ir_generator.cpp  lexer.cpp  lexer.h  llvm_bridge.cpp  nasm_emitter.cpp  parser.cpp  parser.h
syntaxes/: meralang.tmLanguage.json
tests/: test_capsules.cpp
tools/: repl_ui.cpp
trace_logs/: blur_filter.trace
